2003-06-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/text-edit.c (sp_text_edit_dialog): Added line spacing combo
	(sp_text_edit_dialog_update_object): Update line spacing
	(sp_text_edit_dialog_read_selection): Update control

	* src/sp-text.c (sp_text_set): Parse "sodipodi:linespacing"
	(sp_text_set_shape): Use line spacing

	* src/attributes.c: Added "sodipodi:linespacing"

2003-06-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/desktop-properties.c (sp_dtw_border_layer_toggled): New callback
	(sp_desktop_dialog_new): Added border layer
	(sp_dtw_update): Track border layer

	* src/spsvgview.c: Implement slideshow

	* src/sp-namedview.c (sp_namedview_set): Track borderlayer

	* src/desktop.c (sp_desktop_new): Add page border directly to
	main group
	(sp_dt_namedview_modified): Track border layer

	* src/attributes.c: Added "borderlayer"

2003-06-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-pattern.c (sp_pattern_update): Implemented, patterns show up again
	(sp_pattern_painter_new): Painter is not GObject anymore, fixes crash
	(sp_pattern_painter_free): Ditto

	* src/sp-root.c: Removed namedview tracking

	* src/sp-object-repr.c (sp_object_type_lookup): Do not register GUI types
	(sp_object_type_register): New method

	* src/sp-namedview.c (sp_document_namedview): Moved it here to clean
	up dependency chain

	* src/sp-item-group.c (sp_item_group_get_child_by_name): New method

	* src/main.c (sp_main_gui): Register GUI object types
	(sp_main_console): Ditto

	* src/document.c (sp_document_create): Check for namedview using name only

	* src/Makefile.am (spsvgview_SOURCES): Uncommented spsvgview

	* src/libnr/nr-object.c: Use listener arrays instead of lists

2003-06-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.33pre

2003-06-19  Masatake YAMATO  <jet@gyve.org>

	* src/dialogs/desktop-properties.c (sp_color_picker_clicked): Enable "Close"
	button.
	(sp_color_picker_window_close): New functio.
