@@ -1,3 +1,8 @@
+2003-06-30  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/libnrtype/nr-type-ft2.c (nr_typeface_ft2_glyph_outline_get): Do not
+	load outlines multiple times, fixes serious memleak
+
 2003-06-28  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/dialogs/text-edit.c (sp_text_edit_dialog): Added line spacing combo
